# GridObject

./: .gitignore  CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in
doc/latex/: main.aux  main.out  main.tex
doc/latex/settings/: math_defs.tex  preamble.tex  prog.tex
doc/latex/src/: grid.tex
include/grob/: const_container.hpp  container_shift.hpp  csv_io.hpp  grid.hpp  grid_gen.hpp  grid_objects.hpp  iterator_template.hpp  linear_interpolator.hpp  multigrid.hpp  object_serialization.hpp  point.hpp  rectangle.hpp  serialization.hpp  templates.hpp
src/: const_container.hpp  container_shift.hpp  csv_io.hpp  grid.h  grid.hpp  grid_gen.hpp  grid_object.hpp  grid_objects.hpp  iterator_template.hpp  linear_interpolator.hpp  multidim_grid.h  multigrid.hpp  object_serialization.hpp  rectangle.hpp  serialization.hpp  templates.hpp
tests/: debug_defs.hpp  tesdt_multigrid.cpp  test_csv.cpp  test_gobj.cpp  test_grids.cpp  test_grids.hpp  test_grids2.cpp  test_point.cpp  test_potential.cpp  test_rect.cpp  test_serialization.cpp  test_shift.cpp  test_spline.cpp
translator/: grid_object_translator.cpp
